# pycparser

./: .editorconfig  .gitignore  .hgignore  .travis.yml  CHANGES  CONTRIBUTORS  LICENSE  MANIFEST.in  Makefile  README.html  README.rst  README.txt  SECURITY.md  TODO.txt  _clean_tables.py  appveyor.yml  holypycparser.py  holysh.py  pyproject.toml  setup.cfg  setup.py  tox.ini  z.py  z_test.py
.github/workflows/: ci.yml
examples/: README.rst  c-to-c.py  c_json.py  cdecl.py  concatenation.py  construct_ast_from_scratch.py  deadloop_macro.py  dump_ast.py  eval.py  explore_ast.py  func_calls.py  func_defs.py  func_defs_add_param.py  generate_ast.py  indexerror_macro.py  rewrite_ast.py  rewrite_ast_assignment.py  serialize_ast.py  typed_usage.py  using_cpp_libc.py  using_gcc_E_libc.py
examples/c_files/: add.HC  basic.c  concatenation.c  deadloop_macro.c  funky.c  hash.c  helloworld.HC  indexerror_macro.c  macros.c  memmgr.h  pragmas.c  switch_case.HC  year.c
examples/tests/: test_c-to-c.py
pycparser/: __init__.py  _ast_gen.py  _build_tables.py  _c_ast.cfg  _c_ast.yaml  ast.py  ast_transforms.py  c_ast.py  c_generator.py  c_lexer.py  c_parser.py  ply_lexer.py  plyparser.py  portability.py  preprocessing.py  rd_parser.py
pycparser/ply/: LICENSE  cpp.py  ctokens.py  lex.py  yacc.py
pycparser/utils/: lcc_CPYRIGHT
pycparser/utils/fake_libc_include/: _fake_defines.h  iso646.h
pycparser/utils/internal/: example_c_file.c  make_fake_typedefs.py  zz_parse.py
tests/: README.txt  all_tests.py  functional.sh  test_c_ast.py  test_c_generator.py  test_c_lexer.py  test_c_parser.py  test_examples.py  test_general.py  test_util.py
tests/c_files/: c11.c  memmgr.h  year.c
utils/: cpp_READ_THIS_FIRST
utils/benchmark/: benchmark-parse.py
utils/benchmark/inputs/: .gitattributes  sqlite-btree.c.ppout
utils/fake_libc_include/: _fake_defines.h  _fake_function_declarations.h  _fake_typedefs.h  stdatomic.h  uchar.h  zlib.h
utils/fake_libc_include/X11/: Xlib.h  _X11_fake_defines.h
utils/internal/: benchmark-parse.py  fake_includes.py  make_fake_typedefs.py  memprofiling.py  zc.c  zz-ctoc.py  zz_parse.py
