[metadata]
license_file = LICENSE
name = pycparser
author = Eli Bendersky
author_email = eliben@gmail.com
maintainer = Eli Bendersky
license = BSD-3-Clause
description = C parser in Python
url = https://github.com/eliben/pycparser
long_description =
    pycparser is a complete parser of the C language, written in pure Python using the PLY parsing library.
    It parses C code into an AST and can serve as a front-end for C compilers or analysis tools.
long_description_content_type = text/plain

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Cross Platform

[options]
packages = pycparser, pycparser.ply
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.package_data]
pycparser = *.cfg

[bdist_wheel]
universal = 1

